HMAN-867 refactor after dev review. public sort method removed. sort done in situ. Tests expanded to process sorted list in response object.